2005-08-11  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: removed a duplicate function name to get rid of annoying warning messages.

2005-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: added code that plots time using the first time point as zero.  This was done to offset the change made in glui_take, where the recorded timestamps are now in UCT.

2005-07-27  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: improved filename/filetype handling.  improved but did not completely fix the plotting update problem (where a deleted point is not removed from a plot until focus is removed from that tracker).

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: improved the way intensity projection images are included in editing video tracking files.
	
2005-05-22  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: updated load_video_tracking call.

2005-02-02  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m:  added ability to delete datapoints after a selected time.
	* evt_GUI.fig:  same.

2005-02-01  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m:  correctly referenced filename, adjusted background image.

2005-01-31  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m:  fixed a file formatting problem.

2005-01-29  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m:  contains matlab code for editing video tracking data (evt).  Works with Video Spot Tracker v4.0.  Initial Version.
	* evt_GUI.fig:  defines the matlab GUI for editing video tracking datasets.  Initial Version.
